Fix code fence is overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -187,6 +187,7 @@ ul {
 }
 
 .highlight {
+    overflow: scroll;
     background: 0 0;
     background-color: #FAFAFA;
 }
